--- a/src/pages/crearusuario.astro
+++ b/src/pages/crearusuario.astro
@@ -8,7 +8,7 @@ import Layout from "../componentes/layout.astro"
 <title>Crear una cuenta</title>
 <nav>
     <div class="mercado">MERCADOS EL PORVENIR</div>
-    <a href="index" class="iniciarsecion">inicio</a>
+    <a href="https://yayumba.github.io/astro-mercado/" class="iniciarsecion">inicio</a>
 </nav>
 <section>
     <div>
