--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Layout from "../componentes/layout.astro"
 <Layout>
 
 </Layout>
+<link rel="shortcut icon" href="img/pixil.png" type="image/x-icon">
 <title>Mercados el Porvenir</title>
 <nav>
     <div class="mercado">MERCADOS EL PORVENIR</div>
