--- a/src/componentes/layout.astro
+++ b/src/componentes/layout.astro
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/pixil.png" type="image/x-icon">
 </head>
 <header>
     <nav>
