--- a/src/pages/comentarios.astro
+++ b/src/pages/comentarios.astro
@@ -8,7 +8,7 @@ import Layout from "../componentes/layout.astro"
 <title>Comentarios</title>
 <nav>
     <div class="mercado">MERCADOS EL PORVENIR</div>
-    <a href="http://localhost:4321/" class="cerrarsecion">cerrar secion</a>
+    <a href="https://yayumba.github.io/astro-mercado/" class="cerrarsecion">cerrar secion</a>
 </nav>
 <section>
     <h2>COMENTARIOS</h2>
