--- a/src/pages/iniciarsecion.astro
+++ b/src/pages/iniciarsecion.astro
@@ -9,7 +9,7 @@ import Layout from "../componentes/layout.astro"
 <nav>
     <div class="mercado">MERCADOS EL PORVENIR</div>
     <a href="crearusuario" class="iniciarsecion">crear usuario</a>
-    <link rel="shortcut icon" href="../public/img/pixil.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/pixil.png" type="image/x-icon">
 </nav>
 <section>
     <div>
