--- a/src/pages/iniciarsecion.astro
+++ b/src/pages/iniciarsecion.astro
@@ -5,11 +5,11 @@ import Layout from "../componentes/layout.astro"
 <Layout>
     
 </Layout>
+<link rel="shortcut icon" href="img/pixil.png" type="image/x-icon">
 <title>Iniciar seccion</title>
-<nav>
+<nav class="mercado">
     <div class="mercado">MERCADOS EL PORVENIR</div>
     <a href="crearusuario" class="iniciarsecion">crear usuario</a>
-    <link rel="shortcut icon" href="img/pixil.png" type="image/x-icon">
 </nav>
 <section>
     <div>
@@ -61,13 +61,14 @@ import Layout from "../componentes/layout.astro"
         align-self: center;
     }
     nav{
+        display: grid;
         grid-template-columns:auto;
         grid-template-rows: auto;
         grid-template-columns: 5;
         grid-template-rows: 1;
         display: grid;
         background-color: #026773;
-        }
+    }
     .mercado{
         grid-row: 1;
         grid-column: 1/4;
