--- a/src/pages/iniciarsecion.astro
+++ b/src/pages/iniciarsecion.astro
@@ -7,7 +7,7 @@ import Layout from "../componentes/layout.astro"
 </Layout>
 <link rel="shortcut icon" href="img/pixil.png" type="image/x-icon">
 <title>Iniciar seccion</title>
-<nav class="mercado">
+<nav>
     <div class="mercado">MERCADOS EL PORVENIR</div>
     <a href="crearusuario" class="iniciarsecion">crear usuario</a>
 </nav>
