--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,9 @@ import Layout from "../componentes/layout.astro"
     <h1 class="titulo">productos</h1>
     <img class="b1" src="img/banana.jpg" alt="banana">
             <p class="a1">banana</p>
-            <img class="b2" src="../img/durasno.jpg" alt="durasno">
+            <img class="b2" src="img/durasno.jpg" alt="durasno">
             <p class="a2">durasno</p>
-            <img class="b3" src="/src/img/limon.png" alt="limon">
+            <img class="b3" src="img/limon.png" alt="limon">
             <p class="a3">limon</p>
             <img class="b4" src="img/lulo.jpg" alt="lulo">
             <p class="a4">lulo</p>
