--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "../componentes/layout.astro"
 </Layout>
 <link rel="shortcut icon" href="img/pixil.png" type="image/x-icon">
 <title>Mercados el Porvenir</title>
-<nav>
+<nav style="display: grid; grid-template-columns:auto; grid-template-rows: auto; grid-template-columns: 5; grid-template-rows: 1;  background-color: #026773">
     <div class="mercado">MERCADOS EL PORVENIR</div>
     <a href="iniciarsecion" class="iniciarsecion">iniciar secion</a>
 </nav>
