--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "../componentes/layout.astro"
 </Layout>
 <link rel="shortcut icon" href="img/pixil.png" type="image/x-icon">
 <title>Mercados el Porvenir</title>
-<nav style="display: grid; grid-template-columns: 5; grid-template-rows: 1;  background-color: #026773">
+<nav style="display: grid; grid-template-columns: auto; grid-template-rows: auto;  background-color: #026773">
     <div style="   grid-row: 1;  grid-column: 1/4; text-align: center;  color:#F2E3D5;   font-size: 50px;  font-weight: bold;  font-family: arial,sans-serif;">MERCADOS EL PORVENIR</div>
     <a style="grid-row: 1; grid-column: 4;  text-align: center;  color:#F2E3D5 ; font-size: 20px;  background-color: #3CA6A6;    border-radius: 7px; padding-top: 5px;  margin-top: 10px;  margin-bottom: 10px;  margin-left: 100px;  margin-right: 50px;" href="iniciarsecion" class="iniciarsecion">iniciar secion</a>
 </nav>
