--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../componentes/layout.astro"
 ---
-
+<!-- move dist\crearusuario dist\iniciarsecion\  -->
 <Layout>
 
 </Layout>
@@ -17,7 +17,7 @@ import Layout from "../componentes/layout.astro"
             <p class="a1">banana</p>
             <img class="b2" src="img/durasno.jpg" alt="durasno">
             <p class="a2">durasno</p>
-            <img class="b3" src="img/limon.png" alt="limon">
+            <img class="b3" src="img/limon.jpg" alt="limon">
             <p class="a3">limon</p>
             <img class="b4" src="img/lulo.jpg" alt="lulo">
             <p class="a4">lulo</p>
