--- a/src/pages/iniciarsecion.astro
+++ b/src/pages/iniciarsecion.astro
@@ -5,7 +5,7 @@ import Layout from "../componentes/layout.astro"
 <Layout>
     
 </Layout>
-<link rel="shortcut icon" href="img/pixil.png" type="image/x-icon">
+<link rel="shortcut icon" href="/dist/img/pixil.png" type="image/x-icon">
 <title>Iniciar seccion</title>
 <nav>
     <div class="mercado">MERCADOS EL PORVENIR</div>
