--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from "../componentes/layout.astro"
 <section>
     <h1 class="titulo">productos</h1>
     <img class="b1" src="img/banana.jpg" alt="banana">
-            <p class="a1">banana</p>
+            <p class="a1">bananva</p>
             <img class="b2" src="img/durasno.jpg" alt="durasno">
             <p class="a2">durasno</p>
             <img class="b3" src="img/limon.jpg" alt="limon">
