--- a/src/pages/iniciarsecion.astro
+++ b/src/pages/iniciarsecion.astro
@@ -5,6 +5,7 @@ import Layout from "../componentes/layout.astro"
 <Layout>
     
 </Layout>
+<script src="componentes/script.js"></script>
 <link rel="shortcut icon" href="img/pixil.png" type="image/x-icon">
 <title>Iniciar seccion</title>
 <nav>
